--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,10 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
+  flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.10+1
   gap: ^3.0.1
+  google_fonts: ^6.2.1
   lottie: ^3.1.2
   provider: ^6.1.2
 
@@ -53,7 +55,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-  #   - images/a_dot_ham.jpeg
+    - assets/images/
+    - assets/svgs/
+    - assets/icons/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
