--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.6
+  firebase_auth: ^5.0.0
+  firebase_core: ^3.0.0
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.9.3
