--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
     - assets/images/
     - assets/svgs/
     - assets/icons/
+    - assets/lottie/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
