--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^5.0.0
   cupertino_icons: ^1.0.6
   firebase_auth: ^5.0.0
   firebase_core: ^3.0.0
@@ -39,6 +40,7 @@ dependencies:
   google_fonts: ^6.2.1
   lottie: ^3.1.2
   provider: ^6.1.2
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_lints: ^3.0.0
