--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_svg: ^2.0.10+1
   gap: ^3.0.1
   google_fonts: ^6.2.1
+  grouped_list: ^5.1.2
+  intl: ^0.19.0
   lottie: ^3.1.2
   provider: ^6.1.2
   shared_preferences: ^2.2.3
